--- a/CTFd/themes/core/templates/base.html
+++ b/CTFd/themes/core/templates/base.html
@@ -66,18 +66,24 @@
 
 					{% if not get_config('workshop_mode') %}
 						<li class="nav-item">
-							<a class="nav-link" href="{{ request.script_root }}/teams">Teams</a>
+							<a class="nav-link" href="{{ request.script_root }}/teams">团队</a>
 						</li>
 					{% endif %}
 					{% if not hide_scores() %}
 						<li class="nav-item">
-							<a class="nav-link" href="{{ request.script_root }}/scoreboard">Scoreboard</a>
+							<a class="nav-link" href="{{ request.script_root }}/scoreboard">排行榜</a>
 						</li>
 					{% endif %}
 					<li class="nav-item">
-						<a class="nav-link" href="{{ request.script_root }}/challenges">Challenges</a>
+						<a class="nav-link" href="{{ request.script_root }}/challenges">题目</a>
 					</li>
-				</ul>
+                    <li class="nav-item">
+						<a class="nav-link" href="#">论坛</a>
+					</li>
+                    <li class="nav-item">
+						<a class="nav-link" href="{{ request.script_root }}/about">关于</a>
+					</li>
+                </ul>
 
 				<hr class="d-sm-flex d-md-flex d-lg-none">
 
@@ -85,17 +91,17 @@
 					{% if username is defined %}
 						{% if admin %}
 							<li class="nav-item">
-								<a class="nav-link" href="{{ request.script_root }}/admin">Admin</a>
+								<a class="nav-link" href="{{ request.script_root }}/admin">后台</a>
 							</li>
 						{% endif %}
 						<li class="nav-item">
-							<a class="nav-link" href="{{ request.script_root }}/team">Team</a>
+							<a class="nav-link" href="{{ request.script_root }}/team">团队</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="{{ request.script_root }}/profile">个人资料</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{{ request.script_root }}/logout">Logout</a>
+							<a class="nav-link" href="{{ request.script_root }}/logout">退出</a>
 						</li>
 					{% else %}
 						{% if can_register() %}
@@ -123,8 +129,11 @@
 	<footer class="footer">
 		<div class="container text-center">
 			<a href="https://ctfd.io">
-				<small class="text-muted">Powered by CTFd</small>
+				<small class="text-muted">Copyright &copy; Powered by CTFd 青工网安社区</small>
 			</a>
+            <a herf="#">
+                <small class="text-muted">青工网安社区</small>
+            </a>
 		</div>
 	</footer>
 
