增加关于页面

--- a/CTFd/themes/core/templates/base.html
+++ b/CTFd/themes/core/templates/base.html
@@ -95,7 +95,7 @@
 							</li>
 						{% endif %}
 						<li class="nav-item">
-							<a class="nav-link" href="{{ request.script_root }}/team">{{ team.name }}</a>
+							<a class="nav-link" href="{{ request.script_root }}/team">{{ username }}</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="{{ request.script_root }}/profile">个人资料</a>
