--- a/CTFd/themes/core/templates/confirm.html
+++ b/CTFd/themes/core/templates/confirm.html
@@ -30,23 +30,23 @@
 				{% endfor %}
 				{% if team %}
 				<h3 class="text-center">
-					We've sent a confirmation email to {{ team.email }}
+					我们已经给 {{ team.email }}发送了一封右键
 				</h3>
 
 				<br>
 
 				<h4 class="text-center">
-					Please click the link in that email to confirm your account.
+					请您访问邮箱里的链接以确认你的邮箱.
 				</h4>
 				{% endif %}
 
 				{% if username %}
 				<form method="POST" action="{{ request.script_root }}/confirm">
 					<h4 class="text-center">
-						Need to resend the confirmation email?
+						需要重新发送确认邮件吗?
 					</h4>
 					<div class="col-md-12 text-center">
-						<button type="submit" id="submit" tabindex="5" class="btn btn-md btn-primary btn-outlined">Resend</button>
+						<button type="submit" id="submit" tabindex="5" class="btn btn-md btn-primary btn-outlined">重新发送</button>
 					</div>
 					<input type="hidden" name="nonce" value="{{ nonce }}">
 				</form>
