--- a/CTFd/themes/core/templates/profile.html
+++ b/CTFd/themes/core/templates/profile.html
@@ -75,7 +75,7 @@
 				</div>
 				<div class="form-group">
 					<label for="website-input">
-						站点
+						个人站点
 					</label>
 					<input class="form-control" type="text" name="website" id="website-input" value="{% if website %}{{website}}{% endif %}" />
 				</div>
