--- a/CTFd/themes/core/templates/reset_password.html
+++ b/CTFd/themes/core/templates/reset_password.html
@@ -14,7 +14,7 @@
 		<div class="col-md-6 offset-md-3">
 			{% for error in errors %}
 				<div class="alert alert-info alert-dismissable" role="alert">
-				  <span class="sr-only">Error:</span>
+				  <span class="sr-only">错误:</span>
 				  {{ error }}
 				  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
 				</div>
@@ -25,14 +25,14 @@
 				{% if mode %}
 				<div class="form-group">
 					<label for="password-input">
-						Password
+						密码
 					</label>
 					<input class="form-control" type="password" name="password" id="password-input" />
 				</div>
 				{% else %}
 				<div class="form-group">
 					<label for="email-input">
-						Email
+						邮箱
 					</label>
 					<input class="form-control" type="text" name="email" id="email-input" />
 				</div>
