--- a/CTFd/themes/core/templates/scoreboard.html
+++ b/CTFd/themes/core/templates/scoreboard.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+<link rel="stylesheet" href="{{ request.script_root }}/themes/{{ ctf_theme() }}/static/css/scoreboard.css">
 {% block content %}
 <div class="jumbotron">
 	<div class="container">
@@ -20,7 +20,7 @@
 	{% if score_frozen %}
 	<div class="row">
 		<div class="col-md-12">
-			<h1 class="text-center">Scoreboard has been frozen.</h1>
+			<h1 class="text-center">排行榜已经冻结.</h1>
 		</div>
 	</div>
 	{% endif %}
@@ -37,17 +37,30 @@
 			<table class="table table-striped">
 				<thead>
 					<tr>
-						<td scope="col" width="10px"><b>Place</b></td>
-						<td scope="col"><b>Team</b></td>
-						<td scope="col"><b>Score</b></td>
+						<td scope="col" width="100px"><b>排名</b></td>
+						<td scope="col"><b>队名</b></td>
+						<td scope="col"><b>分数</b></td>
+                        <td scope="col"><b>通过数</b></td>
 					</tr>
+
 				</thead>
 				<tbody>
+                    <tr class="">
+						<td scope="col"><b>1</b></td>
+						<td scope="col">
+                            <span class="badge badge-info">我</span>
+                            <span><b>{{ username }}</b></span>
+                        </td>
+						<td scope="col"><b>100</b></td>
+                        <td scope="col"><b>100</b></td>
+					</tr>
 				{% for team in teams %}
 					<tr>
-						<th scope="row" class="text-center">{{ loop.index }}</th>
-						<td><a href="{{ request.script_root }}/team/{{ team.teamid }}">{{ team.name | truncate(50) }}</a></td>
+                    <!--scope="row" class="text-center"-->
+						<td>{{ loop.index }}</td>
+						<td><a href="{{ request.script_root }}/team/{{ team.teamid }}">{{ team.name | truncate(100) }}</a></td>
 						<td>{{ team.score }}</td>
+                        <td>{{ team.score }}</td>
 					</tr>
 				{% endfor %}
 				</tbody>
