--- a/CTFd/themes/core/templates/base.html
+++ b/CTFd/themes/core/templates/base.html
@@ -98,7 +98,7 @@
 							<a class="nav-link" href="{{ request.script_root }}/team">{{ username }}</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{{ request.script_root }}/profile">个人资料</a>
+							<a class="nav-link" href="{{ request.script_root }}/profile">简介</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="{{ request.script_root }}/logout">退出</a>
