--- a/CTFd/themes/core/templates/setup.html
+++ b/CTFd/themes/core/templates/setup.html
@@ -15,7 +15,7 @@
 			{% for error in errors %}
 				<div class="submit-row">
 					<div class="alert alert-danger alert-dismissable" role="alert">
-						<span class="sr-only">Error:</span>
+						<span class="sr-only">错误:</span>
 						{{ error }}
 						<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
 								aria-hidden="true">×</span></button>
