--- a/CTFd/themes/core/templates/teams.html
+++ b/CTFd/themes/core/templates/teams.html
@@ -15,8 +15,8 @@
 			<table class="table table-striped">
 				<thead>
 					<tr>
-						<td><b>Team</b></td>
-						<td><b>Website</b></td>
+						<td><b>用户</b></td>
+						<td><b>个人站点</b></td>
 						<td class="d-none d-md-table-cell d-lg-table-cell"><b>Affiliation</b></td>
 						<td class="d-none d-md-table-cell d-lg-table-cell"><b>Country</b></td>
 					</tr>
