管理员界面

--- a/CTFd/themes/admin/templates/base.html
+++ b/CTFd/themes/admin/templates/base.html
@@ -108,8 +108,11 @@
 	<footer class="footer">
 		<div class="container text-center">
 			<a href="https://ctfd.io">
-				<small class="text-muted">Powered by CTFd</small>
+				<small class="text-muted">Copyright &copy; Powered by CTFd</small>
 			</a>
+            <a href="#">
+                <small class="text-muted">青工网安社区</small>
+            </a>
 		</div>
 	</footer>
 
