--- a/CTFd/themes/admin/templates/modals/files/files.html
+++ b/CTFd/themes/admin/templates/modals/files/files.html
@@ -26,7 +26,7 @@
 								</div>
 								<input type="hidden" name="method" value="upload">
 								<input class="form-control-file" type="file" name="files[]" multiple="multiple">
-								<sub>Attach multiple files using Control+Click or Cmd+Click</sub>
+								<sub>使用Ctrl上传多个文件</sub>
 							</div>
 						</div>
 					</div>
