--- a/CTFd/themes/admin/templates/chals/create.html
+++ b/CTFd/themes/admin/templates/chals/create.html
@@ -16,7 +16,7 @@
 			<div class="row">
 				<div class="col-md-6 offset-md-3">
 					<div id="create-chals-select-div" style="display: none;">
-						<label for="create-chals-select" class="control-label">Choose Challenge Type</label>
+						<label for="create-chals-select" class="control-label">题目类型</label>
 						<select class="form-control" id="create-chals-select">
 						</select>
 					</div>
