--- a/CTFd/themes/core/templates/confirm.html
+++ b/CTFd/themes/core/templates/confirm.html
@@ -30,7 +30,7 @@
 				{% endfor %}
 				{% if team %}
 				<h3 class="text-center">
-					我们已经给 {{ team.email }}发送了一封右键
+					我们已经给 {{ team.email }}发送了一封邮件
 				</h3>
 
 				<br>
