--- a/CTFd/themes/core/templates/teams.html
+++ b/CTFd/themes/core/templates/teams.html
@@ -16,7 +16,7 @@
 				<thead>
 					<tr>
 						<td><b>用户</b></td>
-						<td><b>个人站点</b></td>
+						<td><b>WebSite</b></td>
 						<td class="d-none d-md-table-cell d-lg-table-cell"><b>Affiliation</b></td>
 						<td class="d-none d-md-table-cell d-lg-table-cell"><b>Country</b></td>
 					</tr>
