--- a/CTFd/themes/admin/templates/modals/files/files.html
+++ b/CTFd/themes/admin/templates/modals/files/files.html
@@ -5,7 +5,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<h3 class="text-center">Files</h3>
+							<h3 class="text-center">文件</h3>
 						</div>
 					</div>
 				</div>
@@ -36,7 +36,7 @@
 						<div class="row">
 							<div class="col-md-12">
 								<input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
-								<button class="btn btn-primary float-right" id="submit-files">Upload</button>
+								<button class="btn btn-primary float-right" id="submit-files">上传</button>
 							</div>
 						</div>
 					</div>
