--- a/CTFd/themes/core/templates/base.html
+++ b/CTFd/themes/core/templates/base.html
@@ -71,8 +71,11 @@
 							<a class="nav-link" href="{{ request.script_root }}/scoreboard">排行榜</a>
 						</li>
 					{% endif %}
+                    <li class="nav-item">
+						<a class="nav-link" href="{{ request.script_root }}/selector">基础</a>
+					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="{{ request.script_root }}/challenges">题目</a>
+						<a class="nav-link" href="{{ request.script_root }}/challenges">CTF</a>
 					</li>
                     <li class="nav-item">
 						<a class="nav-link" href="#">论坛</a>
