--- a/CTFd/themes/core/templates/index.html
+++ b/CTFd/themes/core/templates/index.html
@@ -1,12 +1,9 @@
 {% extends "base.html" %}
-
-
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ request.script_root }}/themes/{{ ctf_theme() }}/static/css/about.css">
 {% endblock %}
 {% block content %}
     <div class="about">
-    <h1>关于我们</h1>
-    <h3>我们是青工网安社区</h3>
+        <h1>青岛工学院网络与安全社区</h1>
     </div>
 {% endblock %}
