修改端口以及邮件验证逻辑

--- a/CTFd/themes/core/templates/index.html
+++ b/CTFd/themes/core/templates/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" href="{{ request.script_root }}/themes/{{ ctf_theme() }}/static/css/about.css">
 {% endblock %}
 {% block content %}
-    <div class="about">
+    <div class="">
         <h1>青岛工学院网络与安全社区</h1>
     </div>
 {% endblock %}
