--- a/CTFd/themes/admin/templates/base.html
+++ b/CTFd/themes/admin/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>青工网安社区CTF管理后台</title>
+	<title>{{ ctf_name() }}</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" href="{{ request.script_root }}/themes/core/static/img/favicon.ico" type="image/x-icon">
@@ -17,6 +17,7 @@
 	<script src="{{ request.script_root }}/themes/admin/static/js/vendor/moment.min.js"></script>
 	<script src="{{ request.script_root }}/themes/admin/static/js/vendor/moment-timezone-with-data.min.js"></script>
 	<script src="{{ request.script_root }}/themes/admin/static/js/vendor/nunjucks.min.js"></script>
+    <link rel="stylesheet" href="{{ request.script_root }}/themes/{{ ctf_theme() }}/static/css/nprogress.css">
 	<script type="text/javascript">
 			var script_root = "{{ request.script_root }}";
 			var csrf_nonce = "{{ nonce }}";
@@ -27,7 +28,7 @@
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 		<div class="container">
-			<a href="{{ request.script_root }}/" class="navbar-brand">青工网安社区CTF</a>
+			<a href="{{ request.script_root }}/" class="navbar-brand">{{ ctf_name() }}</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#base-navbars"
 					aria-controls="base-navbars" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -123,6 +124,10 @@
 	<script src="{{ request.script_root }}/themes/admin/static/js/utils.js"></script>
 	<script src="{{ request.script_root }}/themes/admin/static/js/ezq.js"></script>
 	<script src="{{ request.script_root }}/themes/admin/static/js/style.js"></script>
+    <script>
+    NProgress.start();
+    setTimeout(function() { NProgress.done(); $('.fade').removeClass('out'); }, 1000);
+    </script>
 	{% block scripts %} {% endblock %}
 </body>
 
